--- a/xcms-preprocessing.Rmd
+++ b/xcms-preprocessing.Rmd
@@ -40,8 +40,8 @@ This documents describes
 ## Prerequisites
 
 The analysis in this document requires an R version >= 3.5.0 and recent versions
-of the `MSnbase` and `xcms` (version >= 3.3.1 is needed) packages. The code below
-installs all packages for the analysis.
+of the `MSnbase` and `xcms` (version >= 3.3.1 is needed) packages. The code
+below installs all packages for the analysis.
 
 ```{r  install-required, eval = FALSE, results = "hide" }
 source("https://bioconductor.org/biocLite.R")
@@ -51,6 +51,12 @@ biocLite(c("xcms", "MSnbase", "doParallel", "msdata", "magrittr",
 if (packageVersion("xcms") < "3.3.1")
     devtools::install_github("sneumann/xcms", ref = "master") 
 ```
+
+The
+[xcms-preprocessing.Rmd](https://github.com/jotsetung/metabolomics2018/blob/master/xcms-preprocessing.Rmd)
+file with all the code for the analysis can be downloaded from github:
+https://github.com/jotsetung/metabolomics2018 .
+
 
 ## Mass spectrometry
 
